--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "generate-json-schema": "node bin/script.js --script generate-json-schema",
-    "test": "json2ts -i jsonschema/ -o types/"
+    "generate-json-schema": "node bin/script.js --script generate-json-schema"
   },
   "files": [
     "bin"
