--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
   "name": "swagger-to-jsonschema",
   "version": "0.0.1",
   "description": "",
+  "module": "es6",
+  "type": "module",
   "scripts": {
+    "build": "babel bin -d lib",
     "generate-json-schema": "node bin/script.js --script generate-json-schema"
   },
   "files": [
     "bin"
   ],
   "bin": {
-    "setaria": "bin/script.js"
+    "swagger-to-jsonschema": "lib/script.js"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
     "axios": "^1.6.2",
+    "babel-plugin-transform-commonjs": "^1.1.6",
     "chalk": "^2.4.2",
     "https": "^1.0.0",
     "json-schema-to-typescript": "^13.1.1",
