--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "bin": {
     "swagger-to-jsonschema": "lib/script.js"
   },
+  "peerDependencies": {
+    "json-schema-to-typescript": "^13.1.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.6",
